# rpgxEF

./:  .gitlab-ci.yml  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile  README-RPG-X2.txt  README.txt  _Makefile  crashtestdummie.txt  install.sh  make-i386.sh  make-macosx-ub.sh  make-macosx.sh  rpg-x_entities.def
code/: CMakeLists.txt
code/SDL12/include/: SDL_config_minimal.h
code/base_game/: CMakeLists.txt  bg_lib.cpp  bg_list.cpp  bg_list.h  bg_local.h  bg_misc.cpp  bg_misc.h  bg_public.h  q_math.h  q_shared.cpp  q_shared.h
code/botlib/: be_aas_entity.c  be_ai_chat.c  be_ai_goal.c  be_ai_weap.c  be_ea.c  be_interface.c  botlib.h
code/catch2/: CMakeLists.txt  UnitTest.cpp  catch.hpp
code/cgame/: Makefile  STEF Game Source License.doc  Todo.txt  cg_anims.h  cg_consolecmds.c  cg_consolecmds.cpp  cg_draw.c  cg_draw.cpp  cg_drawtools.c  cg_drawtools.cpp  cg_effects.c  cg_effects.cpp  cg_ents.c  cg_ents.cpp  cg_env.c  cg_event.c  cg_event.cpp  cg_info.c  cg_lensflares.c  cg_local.h  cg_localents.c  cg_logger.c  cg_logger.cpp  cg_logger.h  cg_lua.c  cg_lua.h  cg_main.c  cg_main.c.orig  cg_marks.c  cg_marks.cpp  cg_motionblur.c  cg_players.c  cg_players.cpp  cg_playerstate.c  cg_playerstate.cpp  cg_predict.c  cg_predict.cpp  cg_public.h  cg_scoreboard.c  cg_scoreboard.cpp  (+48 more)
code/client/: cl_cgame.c  cl_console.c  cl_input.c  cl_keys.c  cl_main.c  cl_net_chan.c  cl_parse.c  cl_scrn.c  cl_ui.c  client.h  keys.h  snd_codec.c  snd_codec_mp3.c  snd_dma.c  snd_openal.c
code/common/: BitTools.cpp  BitTools.h  CMakeLists.txt  Color.cpp  Color.h  Color.i  ColorTable.h  Math.cpp  Math.h  Math.i  Point2d.cpp  Point2d.h  Point2d.i  Random.cpp  Random.h  Random.i  Rectangle.cpp  Rectangle.h  Rectangle.i  String.cpp  String.h  Vector.cpp  Vector.h  Vector.i  string.h
code/common_game/: Position2D.h  String.cpp  String.h  Warnings.h
code/doctest/: doctest.h  runner.h
code/game/: CMakeLists.txt  Entity.cpp  Entity.h  Event.h  Makefile  ToDo.txt  ai_chat.c  ai_chat.cpp  ai_chat.h  ai_cmd.c  ai_cmd.cpp  ai_cmd.h  ai_common.h  ai_dmnet.c  ai_dmnet.cpp  ai_dmnet.h  ai_dmq3.c  ai_dmq3.c.orig  ai_dmq3.cpp  ai_dmq3.h  ai_main.c  ai_main.cpp  ai_main.h  ai_team.c  ai_team.cpp  ai_team.h  be_aas.h  be_ai_char.h  be_ai_chat.h  be_ai_gen.h  be_ai_goal.h  be_ai_move.h  be_ai_weap.h  be_ea.h  bg_collision.c  bg_collision.h  bg_lex.flex.cpp  bg_lex.h  bg_lex.l  bg_lex.lex  (+174 more)
code/game/entities/: InfoCamp.cpp  InfoCamp.h  InfoNotNull.cpp  InfoNotNull.h  InfoNull.cpp  InfoNull.h  Light.cpp  Light.h  Model.cpp  Model.h
code/game/entityDefParser/: quaked.l
code/game/luaDefParser/: LICENSE  export_lyx.c  export_lyx.h  luadef.l  test.c
code/libs/macosx/: libSDL-1.2.0.dylib
code/libs/win64/: libmad.la
code/lua-debug/: description.txt
code/lua-debug/lua/borg2/: borg2.lua
code/lua/lib/x64/: lua5.3.4-static.lib  lua5.3.4.exp  lua5.3.4.lib
code/lua/lib/x86/: lua5.3.4-static.lib  lua5.3.4.exp  lua5.3.4.lib
code/qcommon/: cm_local.h  cm_trace.c  common.c  files.c  msg.c  net_chan.c  net_ip.c  q_math.c  q_shared.c  q_shared.h  qcommon.h  qfiles.h  stv_version.h  surfaceflags.h
code/renderer/: tr_backend.c  tr_bsp.c  tr_init.c  tr_light.c  tr_local.h  tr_main.c  tr_noise.c  tr_public.h  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_surface.c  tr_types.h
code/sdl/: sdl_icon.h
code/server/: sv_client.c  sv_game.c  sv_init.c  sv_main.c  sv_net_chan.c  sv_snapshot.c  sv_world.c
code/sys/: sys_main.c  sys_unix.c  win_resource.rc
code/tools/entityDefParser/: README
code/tools/luaDefParser/: README  export_lyx.c  export_lyx.h  luadef.l
code/ui/: Atoms.cpp  Atoms.h  CMakeLists.txt  Makefile  ToDo.txt  keycodes.h  ui.def  ui.dsp  ui.plg  ui.q3asm  ui.vcproj  ui.vcproj.old  ui.vcxproj  ui.vcxproj.filters  ui_addbots.c  ui_admin.c  ui_admin.cpp  ui_admin_orig.c  ui_atoms.c  ui_atoms.c.orig  ui_atoms.cpp  ui_cdkey.c  ui_cdkey.cpp  ui_confirm.c  ui_confirm.cpp  ui_connect.c  ui_connect.cpp  ui_controls2.c  ui_controls2.cpp  ui_credits.c  ui_credits.cpp  ui_cvars.c  ui_demo2.c  ui_emotes.c  ui_emotes.cpp  ui_fonts.c  ui_gameinfo.c  ui_gameinfo.cpp  ui_holodeck.c  ui_holodeck.cpp  (+62 more)
code/ui/Menu/: MenuAction.cpp  MenuAction.h  MenuBitmap.cpp  MenuBitmap.h  MenuColor.cpp  MenuColor.h  MenuColors.h  MenuCommon.cpp  MenuCommon.h  MenuField.cpp  MenuField.h  MenuFieldData.cpp  MenuFieldData.h  MenuFocus.cpp  MenuFocus.h  MenuFramework.cpp  MenuFramework.h  MenuGraphics.cpp  MenuGraphics.h  MenuItem.h  MenuList.cpp  MenuList.h  MenuRadioButton.cpp  MenuRadioButton.h  MenuShader.cpp  MenuShader.h  MenuSize.cpp  MenuSize.h  MenuSlider.cpp  MenuSlider.h  MenuText.cpp  MenuText.h  MenuTextB.cpp  MenuTextB.h  MenuTextP.cpp  MenuTextP.h
code/unit_test_runner/: main.cpp
misc/doctest/: doctest.vcxitems  doctest.vcxitems.filters
misc/msvc10/: ioq3.sln  quake3.vcxproj  quake3.vcxproj.filters
misc/msvc10/base_game/: base_game.vcxitems  base_game.vcxitems.filters
misc/msvc10/bg_shared/: bg_shared.vcxitems
misc/msvc10/common_game/: common_game.vcxitems
misc/msvc10/unit_test_runner/: unit_test_runner.vcxproj  unit_test_runner.vcxproj.filters
